--- a/quai-blockscout-chart/templates/ingress.yaml
+++ b/quai-blockscout-chart/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: {{ $name }}
     kubernetes.io/ingress.class: "gce"
-    kubernetes.gke.io/managed-certificates: {{ $name }}
+    networking.gke.io/managed-certificates: {{ $name }}
   namespace: {{ .Values.quaiBlockscout.env }}
 spec:
   defaultBackend:
