--- a/quai-blockscout-chart/templates/ingress.yaml
+++ b/quai-blockscout-chart/templates/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: {{ $name }}
     kubernetes.io/ingress.class: "gce"
     networking.gke.io/managed-certificates: {{ $name }}
+    networking.gke.io/v1beta1.FrontendConfig: {{ $name }}
   namespace: {{ .Values.quaiBlockscout.env }}
 spec:
   defaultBackend:
